[package]
edition = "2021"
name = "errno-no-std"
version = "0.1.2"
rust-version = "1.59"
authors = ["warlock <internalmike@gmail.com>"]
description = "Cross-platform interface to the `errno` variable."
readme = "README.md"
documentation = "https://docs.rs/errno-no-std/"
keywords = ["errno", "no_std", "unix", "windows", "linux"]
categories = ["os", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/errno-no-std"

[features]
default = ["std"]
std = []

[target.'cfg(not(windows))'.dependencies]
errno-sys = "0.1.0"
libc = { version = "0.2.124", default-features = false }

[target.'cfg(windows)'.dependencies]
widestring = { version = "0.5.1", default-features = false }
winapi = { version = "0.3.9", features = ["errhandlingapi", "minwindef", "ntdef", "winbase"] }

[dev-dependencies]
copy_from_str = "1.0.5"
panicking = "0.2.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[target.'cfg(windows)'.dev-dependencies]
libc = { version = "0.2.124", default-features = false }
winapi = { version = "0.3.9", features = ["winerror"] }

[badges]
maintenance = { status = "actively-developed" }
