[package]
edition = "2021"
name = "ensure_no_std"
version = "0.0.0"
publish = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
errno-no-std = { path = "..", default-features = false }
exit-no-std = "0.2.0"

[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "winerror"] }
